// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectAdminParticipant /> should render a non-selectable list when "emailing" is disabled 1`] = `
<div
  className="styles__Container-fmDIgl iKKqeY pickableList-row ProjectAdminParticipantstyle__Container-gBxtgi eWyfNu"
>
  <div
    className="styles__ChildWrapper-gACLRm pickableList-row-content"
    selected={false}
  >
    <div
      className="ProjectAdminParticipantstyle__ParticipantInfo-eKEAyg ivxndD"
    >
      <div
        className="ProjectAdminParticipantstyle__UsernameContainer-fgfHrI jBpEnu"
      >
        <a
          href="<mock-value-for-field-\\"adminUrl\\">"
        >
          &lt;mock-value-for-field-"username"&gt;
        </a>
      </div>
      <div
        className="ProjectAdminParticipantstyle__NameContainer-dDCFfd brFOlC"
      >
        <span>
          &lt;mock-value-for-field-"firstname"&gt; &lt;mock-value-for-field-"lastname"&gt;
        </span>
        <span
          className="separator"
        >
          •
        </span>
        active.on.date {"date":"2 avr. 2021"}
      </div>
      <ul
        className="InlineList__Container-jBwJNT lbXmrW inline-list"
        margin={true}
        separator=" "
      >
        <li>
          <button
            onClick={[Function]}
            type="button"
          >
            <IconMock
              aria-hidden={true}
              className="icon"
              fill="#707070"
              height={12}
              style={
                Object {
                  "flexShrink": "0",
                  "verticalAlign": "middle",
                }
              }
              width={12}
            />
            <span>
              &lt;mock-value-for-field-"name"&gt;
            </span>
          </button>
        </li>
        <li>
          <IconMock
            aria-hidden={true}
            className="icon"
            fill="#707070"
            height={12}
            style={
              Object {
                "flexShrink": "0",
                "verticalAlign": "middle",
              }
            }
            width={12}
          />
          <span>
            &lt;mock-value-for-field-"email"&gt;
          </span>
        </li>
        <li>
          <IconMock
            aria-hidden={true}
            className="icon"
            fill="#707070"
            height={12}
            style={
              Object {
                "flexShrink": "0",
                "verticalAlign": "middle",
              }
            }
            width={12}
          />
          global.votes {"num":42}
        </li>
        <li>
          <IconMock
            aria-hidden={true}
            className="icon"
            fill="#707070"
            height={12}
            style={
              Object {
                "flexShrink": "0",
                "verticalAlign": "middle",
              }
            }
            width={12}
          />
          synthesis.common.elements.nb {"num":42}
        </li>
      </ul>
    </div>
    <span
      className="UserAvatarLegacy__UserAvatarContainer-eQa-dDJ krYksw"
      hasBadge={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      style={Object {}}
    >
      <img
        alt="<mock-value-for-field-\\"username\\">"
        className="sc-breQAM img-circle object-cover user-avatar mr-10 "
        loading="lazy"
        sizes="(max-width: 320px) 320px, (max-width: 640px) 640px, (max-width: 960px) 960px, (max-width: 1280px) 1280px, (max-width: 2560px) 2560px,"
        srcSet="
        http://localhost/cdn-cgi/image/width=320,format=auto/<mock-value-for-field-\\"url\\">   320w,
         http://localhost/cdn-cgi/image/width=640,format=auto/<mock-value-for-field-\\"url\\">   640w,
         http://localhost/cdn-cgi/image/width=960,format=auto/<mock-value-for-field-\\"url\\">   960w,
         http://localhost/cdn-cgi/image/width=1280,format=auto/<mock-value-for-field-\\"url\\"> 1280w,
         http://localhost/cdn-cgi/image/width=2560,format=auto/<mock-value-for-field-\\"url\\"> 2560w,
         http://localhost/cdn-cgi/image/dpr=2,format=auto/<mock-value-for-field-\\"url\\"> 2x,
         http://localhost/cdn-cgi/image/dpr=3,format=auto/<mock-value-for-field-\\"url\\"> 3x,
         "
        style={
          Object {
            "height": "42px",
            "minWidth": "42px",
            "width": "42px",
          }
        }
      />
    </span>
  </div>
</div>
`;

exports[`<ProjectAdminParticipant /> should render a selectable list when "emailing" is enabled 1`] = `
<div
  className="styles__Container-fmDIgl iKKqeY pickableList-row ProjectAdminParticipantstyle__Container-gBxtgi eWyfNu"
>
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="styles__ChildWrapper-gACLRm pickableList-row-content"
    selected={false}
  >
    <div
      className="ProjectAdminParticipantstyle__ParticipantInfo-eKEAyg ivxndD"
    >
      <div
        className="ProjectAdminParticipantstyle__UsernameContainer-fgfHrI jBpEnu"
      >
        <a
          href="<mock-value-for-field-\\"adminUrl\\">"
        >
          &lt;mock-value-for-field-"username"&gt;
        </a>
      </div>
      <div
        className="ProjectAdminParticipantstyle__NameContainer-dDCFfd brFOlC"
      >
        <span>
          &lt;mock-value-for-field-"firstname"&gt; &lt;mock-value-for-field-"lastname"&gt;
        </span>
        <span
          className="separator"
        >
          •
        </span>
        active.on.date {"date":"2 avr. 2021"}
      </div>
      <ul
        className="InlineList__Container-jBwJNT lbXmrW inline-list"
        margin={true}
        separator=" "
      >
        <li>
          <button
            onClick={[Function]}
            type="button"
          >
            <IconMock
              aria-hidden={true}
              className="icon"
              fill="#707070"
              height={12}
              style={
                Object {
                  "flexShrink": "0",
                  "verticalAlign": "middle",
                }
              }
              width={12}
            />
            <span>
              &lt;mock-value-for-field-"name"&gt;
            </span>
          </button>
        </li>
        <li>
          <IconMock
            aria-hidden={true}
            className="icon"
            fill="#707070"
            height={12}
            style={
              Object {
                "flexShrink": "0",
                "verticalAlign": "middle",
              }
            }
            width={12}
          />
          <span>
            &lt;mock-value-for-field-"email"&gt;
          </span>
        </li>
        <li>
          <IconMock
            aria-hidden={true}
            className="icon"
            fill="#707070"
            height={12}
            style={
              Object {
                "flexShrink": "0",
                "verticalAlign": "middle",
              }
            }
            width={12}
          />
          global.votes {"num":42}
        </li>
        <li>
          <IconMock
            aria-hidden={true}
            className="icon"
            fill="#707070"
            height={12}
            style={
              Object {
                "flexShrink": "0",
                "verticalAlign": "middle",
              }
            }
            width={12}
          />
          synthesis.common.elements.nb {"num":42}
        </li>
      </ul>
    </div>
    <span
      className="UserAvatarLegacy__UserAvatarContainer-eQa-dDJ krYksw"
      hasBadge={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      style={Object {}}
    >
      <img
        alt="<mock-value-for-field-\\"username\\">"
        className="sc-breQAM img-circle object-cover user-avatar mr-10 "
        loading="lazy"
        sizes="(max-width: 320px) 320px, (max-width: 640px) 640px, (max-width: 960px) 960px, (max-width: 1280px) 1280px, (max-width: 2560px) 2560px,"
        srcSet="
        http://localhost/cdn-cgi/image/width=320,format=auto/<mock-value-for-field-\\"url\\">   320w,
         http://localhost/cdn-cgi/image/width=640,format=auto/<mock-value-for-field-\\"url\\">   640w,
         http://localhost/cdn-cgi/image/width=960,format=auto/<mock-value-for-field-\\"url\\">   960w,
         http://localhost/cdn-cgi/image/width=1280,format=auto/<mock-value-for-field-\\"url\\"> 1280w,
         http://localhost/cdn-cgi/image/width=2560,format=auto/<mock-value-for-field-\\"url\\"> 2560w,
         http://localhost/cdn-cgi/image/dpr=2,format=auto/<mock-value-for-field-\\"url\\"> 2x,
         http://localhost/cdn-cgi/image/dpr=3,format=auto/<mock-value-for-field-\\"url\\"> 3x,
         "
        style={
          Object {
            "height": "42px",
            "minWidth": "42px",
            "width": "42px",
          }
        }
      />
    </span>
  </div>
</div>
`;
